add this all img and file

--- a/educational_toy.html
+++ b/educational_toy.html
@@ -226,6 +226,27 @@
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
                     <div class="border box p-4">
+                        <h4><b> Benefits of Pyramid Cube for Kids' Learning</b></h4>
+                        <ul class="list-unstyled">
+                            <li><b>🧠 Cognitive & Problem-Solving Skills</b></li>
+                            <li><b>✋ Fine Motor Skills Development</b></li>
+                            <li><b>🎨 Boosts Creativity & Imagination</b> </li>
+                            <li><b>🗣️ Language & Communication Skills</b></li> 
+                            <li><b>🧱 Understanding of Shapes, Sizes & Colors</b></li>
+                            <li><b>😌 Builds Patience & Focus</b></li>
+                            <li><b>👬 Social Skills & Teamwork</b> </li>
+                            <li><b>🚧 Safe Exploration of the Real World</b></li>
+                        </ul>
+                        <div class="text-center mt-4">
+                            <a href="https://wa.link/xmj64w" class="button rounded-1" id="whats-link">
+                                <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
+                                CONNECT US</a>
+                            
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="col-lg-6 px-5 pt-4">
+                    <div class="border box p-4">
                         <h2><b>Alpha Numeric Puzzle Game</b></h2>
                         <table>
                             <tbody>
@@ -280,7 +301,7 @@
                                 BUY NOW</a>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="row">
                 <div class="col-lg-6">
@@ -716,7 +737,7 @@
             </div>
         </div>
     </section>
-   
+
 
     <!-- Educational end -->
 
@@ -878,7 +899,7 @@
             // Add active to selected
             thumb.classList.add('active');
         }
-         function changeImage6(thumb) {
+        function changeImage6(thumb) {
             const main = document.getElementById('mainDisplay6');
             main.src = thumb.src;
             // Remove active from all
