--- a/magic_beans.html
+++ b/magic_beans.html
@@ -225,8 +225,12 @@
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
-                    <div class="border box p-4">
+                     <div class="border box p-4 mb-3">
                         <h4><b>Magic Beans Puzzle Spinner Cube</b></h4>
+                        <h3><b>₹ 199</b></h3>
+                        <span>Free Delivery</span>
+                    </div>
+                    <div class="border box p-4">
                         <p>Boost Your Child's Learning Through Play</p>
                         <p><b> Looking for toys that are both fun and educational?</b></p>
                         <p>Discover our carefully curated collection designed to support your child’s cognitive, motor, and social development.</p>
