--- a/montessori_learning.html
+++ b/montessori_learning.html
@@ -225,11 +225,16 @@
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
-                    <div class="border box p-4">
+                    <div class="border box p-4 mb-3">
                         <h4><b>2 in 1 Montessori Learning toy</b></h4>
+                         <h3><b>₹ 299</b></h3>
+                        <span>Free Delivery</span>
+                    </div>
+                    <div class="border box p-4">
                         <p>Boost Your Child's Learning Through Play</p>
                         <p><b> Looking for toys that are both fun and educational?</b></p>
-                        <p>Discover our carefully curated collection designed to support your child’s cognitive, motor, and social development.</p>
+                        <p>Discover our carefully curated collection designed to support your child’s cognitive, motor,
+                            and social development.</p>
                         <ul class="list-unstyled">
                             <li>✅ High-Quality & Safe Materials</li>
                             <li>✅ Designed by Experts in Child Development</li>
@@ -238,17 +243,19 @@
                         </ul>
                         <ul class="list-unstyled">
                             <li><b>🧠 Promotes Motor Skills</b></li>
-                            <li><b>🎯 Enhances Coordination</b></li>   
-                            <li><b>🚗 Boosts Cognitive Growth </b></li>    
-                            <li><b>👀 Teaches Cause & Effect</b></li>                 
+                            <li><b>🎯 Enhances Coordination</b></li>
+                            <li><b>🚗 Boosts Cognitive Growth </b></li>
+                            <li><b>👀 Teaches Cause & Effect</b></li>
                         </ul>
                         <div class="text-center mt-4">
                             <a href="https://wa.link/xmj64w" class="button rounded-1" id="whats-link">
                                 <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
                                 CONNECT US</a>
-                            
+
                         </div>
                     </div>
+
+
                 </div>
                 <!-- <div class="col-lg-6 px-5 pt-4">
                     <div class="border box p-4">
@@ -308,7 +315,7 @@
                     </div>
                 </div> -->
             </div>
-           
+
         </div>
     </section>
 
