--- a/shape_shorter.html
+++ b/shape_shorter.html
@@ -225,11 +225,16 @@
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
-                    <div class="border box p-4">
+                    <div class="border box p-4 mb-3">
                         <h4><b>Shape Shorter Cude</b></h4>
+                        <h3><b>₹ 199</b></h3>
+                        <span>Free Delivery</span>
+                    </div>
+                    <div class="border box p-4">
                         <p>Boost Your Child's Learning Through Play</p>
                         <p><b> Looking for toys that are both fun and educational?</b></p>
-                        <p>Discover our carefully curated collection designed to support your child’s cognitive, motor, and social development.</p>
+                        <p>Discover our carefully curated collection designed to support your child’s cognitive, motor,
+                            and social development.</p>
                         <ul class="list-unstyled">
                             <li>✅ High-Quality & Safe Materials</li>
                             <li>✅ Designed by Experts in Child Development</li>
@@ -238,15 +243,15 @@
                         </ul>
                         <ul class="list-unstyled">
                             <li><b>🔷 Shape Recognition </b></li>
-                            <li><b>✋ Hand-Eye Coordination </b></li>   
-                            <li><b>🌈 Color Learning </b></li>    
-                            <li><b>🚶‍♂️ Gross Motor Development </b></li>                 
+                            <li><b>✋ Hand-Eye Coordination </b></li>
+                            <li><b>🌈 Color Learning </b></li>
+                            <li><b>🚶‍♂️ Gross Motor Development </b></li>
                         </ul>
                         <div class="text-center mt-4">
                             <a href="https://wa.link/xmj64w" class="button rounded-1" id="whats-link">
                                 <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
                                 CONNECT US</a>
-                            
+
                         </div>
                     </div>
                 </div>
@@ -308,7 +313,7 @@
                     </div>
                 </div> -->
             </div>
-           
+
         </div>
     </section>
     <!-- shape_shorter end -->
