--- a/toys-games.html
+++ b/toys-games.html
@@ -302,6 +302,8 @@
                                             <h5 class="card-title">2 in 1 Montessori Learning toy</h5>
                                             <p class="card-text">Boosts early learning with fun, hands-on activities and
                                                 dual-purpose play.</p>
+                                                <h4><b>₹ 299</b></h4>
+                                                <span>Free Delivery</span>
                                             <a href="montessori_learning.html" class="btn btn-primary">View More</a>
                                         </div>
                                     </div>
@@ -313,6 +315,8 @@
                                             <h5 class="card-title">Shape Matching Game</h5>
                                             <p class="card-text">Fun and educational toy to match shapes, colors, and
                                                 boost motor skills.</p>
+                                                 <h4><b>₹ 299</b></h4>
+                                                <span>Free Delivery</span>
                                             <a href="shape_matching.html" class="btn btn-primary">View More</a>
                                         </div>
                                     </div>
@@ -325,6 +329,8 @@
                                             <h5 class="card-title">Shape Shorter Cude</h5>
                                             <p class="card-text">Shape Shorter Cube: Match shapes, stack pieces, learn
                                                 through play.</p>
+                                                 <h4><b>₹ 199</b></h4>
+                                                <span>Free Delivery</span>
                                             <a href="shape_shorter.html" class="btn btn-primary">View More</a>
                                         </div>
                                     </div>
@@ -336,8 +342,9 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Alpha Numeric Board - 29 Sticks</h5>
                                             <p class="card-text">Learn letters, numbers with colorful sticks for fun
-                                                educational play.
-                                            </p>
+                                                educational play. </p>
+                                                 <h4><b>₹ 249</b></h4>
+                                                <span>Free Delivery</span>
                                             <a href="alpha_numeric.html" class="btn btn-primary">View More</a>
                                         </div>
                                     </div>
@@ -434,6 +441,8 @@
                                             <h5 class="card-title">Frog Tree Balance Game</h5>
                                             <p class="card-text">A fun balancing toy where kids stack frogs without
                                                 toppling the tree.</p>
+                                                 <h4><b>₹ 249</b></h4>
+                                                <span>Free Delivery</span>
                                             <a href="frog_tree.html" class="btn btn-primary">View More</a>
                                         </div>
                                     </div>
@@ -446,6 +455,8 @@
                                             <h5 class="card-title">Triggle Chess Game </h5>
                                             <p class="card-text">A unique, strategic game that blends classic chess with
                                                 a triangular twist.</p>
+                                                 <h4><b>₹ 249</b></h4>
+                                                <span>Free Delivery</span>
                                             <a href="triggle_chess.html" class="btn btn-primary">View More</a>
                                         </div>
                                     </div>
@@ -458,6 +469,8 @@
                                             <h5 class="card-title">IQ Game - 120 Challenges</h5>
                                             <p class="card-text">IQ Game with 120 brain-teasing challenges for sharp
                                                 logical thinking.</p>
+                                                 <h4><b>₹ 249</b></h4>
+                                                <span>Free Delivery</span>
                                             <a href="iq_game.html" class="btn btn-primary">View More</a>
                                         </div>
                                     </div>
@@ -470,6 +483,8 @@
                                             <h5 class="card-title">Memory Chess Game</h5>
                                             <p class="card-text">Colorful memory game to boost focus, recall, and fun
                                                 learning.</p>
+                                                 <h4><b>₹ 199</b></h4>
+                                                <span>Free Delivery</span>
                                             <a href="memory_chess.html" class="btn btn-primary">View More</a>
                                         </div>
                                     </div>
@@ -482,6 +497,8 @@
                                             <h5 class="card-title">Gobble Game</h5>
                                             <p class="card-text">Fun strategy game with stacking pieces for memory and
                                                 logic skills.</p>
+                                                 <h4><b>₹ 199</b></h4>
+                                                <span>Free Delivery</span>
                                             <a href="gobble_game.html" class="btn btn-primary">View More</a>
                                         </div>
                                     </div>
@@ -494,6 +511,8 @@
                                             <h5 class="card-title">Otrio Tri-Ring Strategy Game</h5>
                                             <p class="card-text">Strategic tri-ring game that sharpens logic, focus, and
                                                 planning skills.</p>
+                                                 <h4><b>₹ 249</b></h4>
+                                                <span>Free Delivery</span>
                                             <a href="otrio_tri-ring.html" class="btn btn-primary">View More</a>
                                         </div>
                                     </div>
@@ -506,6 +525,8 @@
                                             <h5 class="card-title">Tic Tac Toe Classic Game</h5>
                                             <p class="card-text">Classic Tic Tac Toe game for fun, strategy, and quick
                                                 thinking.</p>
+                                                 <h4><b>₹ 99</b></h4>
+                                                <span>Free Delivery</span>
                                             <a href="tic_tac_toe.html" class="btn btn-primary">View More</a>
                                         </div>
                                     </div>
@@ -879,6 +900,8 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Wooden Table Tennis Trainer</h5>
                                             <p class="card-text">Wooden Table Tennis Trainer – Improves skills, focus, and hand coordination.</p>
+                                            <h4><b>₹ 199</b></h4>
+                                                <span>Free Delivery</span>
                                             <a href="wooden_table.html" class="btn btn-primary">View More</a>
                                         </div>
                                     </div>
@@ -895,6 +918,8 @@
                                             <h5 class="card-title">Magic Beans Puzzle Spinner Cube</h5>
                                             <p class="card-text">Magic Bean Cube Spinner provides fidgeting fun and
                                                 stress relief.</p>
+                                                 <h4><b>₹ 199</b></h4>
+                                                <span>Free Delivery</span>
                                             <a href="magic_beans.html" class="btn btn-primary">View More</a>
                                         </div>
                                     </div>
@@ -905,6 +930,8 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Infinity Cube </h5>
                                             <p class="card-text">Infinity Cube – Fidget toy for focus, fun, and stress relief.</p>
+                                             <h4><b>₹ 149</b></h4>
+                                                <span>Free Delivery</span>
                                             <a href="infinity_cube.html" class="btn btn-primary">View More</a>
                                         </div>
                                     </div>
