--- a/shape_matching.html
+++ b/shape_matching.html
@@ -225,11 +225,17 @@
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
-                    <div class="border box p-4">
+                    <div class="border box p-4 mb-3">
                         <h4><b>Shape Matching Game</b></h4>
+                        <h3><b>₹ 299</b></h3>
+                        <span>Free Delivery</span>
+                    </div>
+                    <div class="border box p-4">
                         <p>Boost Your Child's Learning Through Play</p>
                         <p><b> Looking for toys that are both fun and educational?</b></p>
-                        <p>Discover our carefully curated collection designed to support your child’s cognitive, motor, and social development.</p>
+                        <p>Discover our carefully curated collection designed to support your child’s cognitive, motor,
+                            and
+                            social development.</p>
                         <ul class="list-unstyled">
                             <li>✅ High-Quality & Safe Materials</li>
                             <li>✅ Designed by Experts in Child Development</li>
@@ -238,17 +244,19 @@
                         </ul>
                         <ul class="list-unstyled">
                             <li><b>🧠 Shape Matching Game</b></li>
-                            <li><b>🎨 Encourages Creativity</b></li>   
-                            <li><b>🤲 Improves Motor Skills</b></li>    
-                            <li><b>😁 Keeps Kids Engaged </b></li>                 
+                            <li><b>🎨 Encourages Creativity</b></li>
+                            <li><b>🤲 Improves Motor Skills</b></li>
+                            <li><b>😁 Keeps Kids Engaged </b></li>
                         </ul>
                         <div class="text-center mt-4">
                             <a href="https://wa.link/xmj64w" class="button rounded-1" id="whats-link">
                                 <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
                                 CONNECT US</a>
-                            
+
                         </div>
                     </div>
+
+
                 </div>
                 <!-- <div class="col-lg-6 px-5 pt-4">
                     <div class="border box p-4">
@@ -308,7 +316,7 @@
                     </div>
                 </div> -->
             </div>
-           
+
         </div>
     </section>
     <!-- shape_matching end -->
