--- a/tic_tac_toe.html
+++ b/tic_tac_toe.html
@@ -204,7 +204,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="pt-5"><b><a href="toys-games.html">Otrio Tri-Ring Strategy Game</a></b></h2>
+                    <h2 class="pt-5"><b><a href="toys-games.html">Tic Tac Toe Classic Game</a></b></h2>
                 </div>
             </div>
             <div class="row">
@@ -225,8 +225,12 @@
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
+                      <div class="border box p-4 mb-3">
+                        <h4><b>Tic Tac Toe Classic Game</b></h4>
+                        <h3><b>₹ 99</b></h3>
+                        <span>Free Delivery</span>
+                    </div>
                     <div class="border box p-4">
-                        <h4><b>Otrio Tri-Ring Strategy Game</b></h4>
                         <p>Boost Your Child's Learning Through Play</p>
                         <p><b> Looking for toys that are both fun and educational?</b></p>
                         <p>Discover our carefully curated collection designed to support your child’s cognitive, motor, and social development.</p>
