--- a/wooden_table.html
+++ b/wooden_table.html
@@ -225,8 +225,13 @@
                     </div>
                 </div>
                 <div class="col-lg-6 px-5 pt-4">
-                    <div class="border box p-4">
+                    <div class="border box p-4 mb-3">
                         <h4><b>Wooden Table Tennis Trainer</b></h4>
+                        <h3><b>₹ 199</b></h3>
+                        <span>Free Delivery</span>
+                    </div>
+
+                    <div class="border box p-4">
                         <p>Boost Your Child's Learning Through Play</p>
                         <p><b> Looking for toys that are both fun and educational?</b></p>
                         <p>Discover our carefully curated collection designed to support your child’s cognitive, motor,
@@ -251,7 +256,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="col-lg-6 px-5 pt-4">
+            </div>
+            <!-- <div class="col-lg-6 px-5 pt-4">
                     <div class="border box p-4">
                         <h2><b>Alpha Numeric Puzzle Game</b></h2>
                         <table>
@@ -308,9 +314,8 @@
                         </div>
                     </div>
                 </div> -->
-            </div>
-
         </div>
+
     </section>
 
 
