--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 </div>
             </div>
             <div class="row mb-3">
-                <div class="col-auto mx-auto"><a href="toys-games.html" class="view">View all <i
+                <div class="col-auto mx-auto"><a href="toys-games.html" class="view">Buy Now <i
                             class="fa-solid fa-angle-right"></i>
                     </a></div>
             </div>
@@ -340,7 +340,7 @@
                 </div>
             </div>
             <div class="row mb-3">
-                <div class="col-auto mx-auto"><a href="educational_toy.html" class="view">View all <i
+                <div class="col-auto mx-auto"><a href="educational_toy.html" class="view">Buy Now <i
                             class="fa-solid fa-angle-right"> </i>
                     </a></div>
             </div>
@@ -400,7 +400,7 @@
                 </div>
             </div>
             <div class="row mb-3">
-                <div class="col-auto mx-auto"><a href="sports_toy.html" class="view">View all <i
+                <div class="col-auto mx-auto"><a href="sports_toy.html" class="view">Buy Now <i
                             class="fa-solid fa-angle-right"> </i>
                     </a></div>
             </div>
@@ -460,7 +460,7 @@
                 </div>
             </div>
             <div class="row mb-3">
-                <div class="col-auto mx-auto"><a href="musical_toy.html" class="view">View all <i
+                <div class="col-auto mx-auto"><a href="musical_toy.html" class="view">Buy Now <i
                             class="fa-solid fa-angle-right"></i>
                     </a></div>
             </div>
@@ -520,7 +520,7 @@
                 </div>
             </div>
             <div class="row mb-3">
-                <div class="col-auto mx-auto"><a href="puzzle_game.html" class="view">View all <i
+                <div class="col-auto mx-auto"><a href="puzzle_game.html" class="view">Buy Now <i
                             class="fa-solid fa-angle-right"></i>
                     </a></div>
             </div>
@@ -580,7 +580,7 @@
                 </div>
             </div>
             <div class="row mb-3">
-                <div class="col-auto mx-auto"><a href="baby_toy.html" class="view">View all <i
+                <div class="col-auto mx-auto"><a href="baby_toy.html" class="view">Buy Now <i
                             class="fa-solid fa-angle-right"></i>
                     </a></div>
             </div>
