add linking in all page

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="educational_toy.html"> Educational
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-home"> Educational
                                                         Toy</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="construction_toy.html">Construction Toy
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-profile">Construction Toy
                                                     </a>
                                                 </li>
                                             </td>
@@ -68,48 +68,48 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="board_game.html"> Board Game</a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings0"> Board Game</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="musical_toy.html">Musical Toy</a>
-                                                </li>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item" href="puzzle_game.html"> Puzzle Game </a>
-                                                </li>
-                                            </td>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item" href="building_blocks.html"> Building Blocks </a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings1">Musical Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="sports_toy.html"> Sports Toy </a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings2"> Puzzle Game </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="creative_toy.html"> Creative Toy </a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings3"> Building Blocks </a>
                                                 </li>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="baby_toy.html"> Baby Toy</a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings6"> Sports Toy </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="outdoor_toy.html">Outdoor Toy</a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings7"> Creative Toy </a>
+                                                </li>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings8"> Baby Toy</a>
+                                                </li>
+                                            </td>
+                                            <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings9">Outdoor Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -117,8 +117,8 @@
                                 </table>
                             </ul>
                         </li>
-                        <li class="nav-item"><a href="birthday_gifts.html" class="nav-link">Birthday Gifts</a></li>
-                        <li class="nav-item"><a href="corporate_gifts.html" class="nav-link">Corporate Gifts</a></li>
+                        <li class="nav-item"><a href="toys-games.html#v-pills-settings4" class="nav-link">Birthday Gifts</a></li>
+                        <li class="nav-item"><a href="toys-games.html#v-pills-settings5" class="nav-link">Corporate Gifts</a></li>
                     </ul>
                 </div>
                 <div class="col-auto ms-lg-auto mx-auto">
@@ -158,8 +158,8 @@
                     </a>
                 </li>
                 <li><a href="toys-games.html">Products</a></li>
-                <li><a href="birthday_gifts.html">Birthday Gifts</a></li>
-                <li><a href="corporate_gifts.html">Corporate Gifts</a></li>
+                <li><a href="toys-games.html#v-pills-settings4">Birthday Gifts</a></li>
+                <li><a href="toys-games.html#v-pills-settings5">Corporate Gifts</a></li>
             </ul>
         </div>
     </div>
@@ -183,16 +183,16 @@
         </div>
         <div class="offcanvas-body">
             <ul class="nav-item list-unstyled mb-0">
-                <li><a href="educational_toy.html">Educational Toy</a> </li>
-                <li><a href="construction_toy.html">Construction Toy</a></li>
-                <li><a href="board_game.html">Board Game</a></li>
-                <li><a href="musical_toy.html">Musical Toy</a></li>
-                <li><a href="puzzle_game.html">Puzzle Game</a></li>
-                <li><a href="building_blocks.html">Building Blocks</a></li>
-                <li><a href="sports_toy.html">Sports Toy</a></li>
-                <li><a href="creative_toy.html">Creative Toy</a></li>
-                <li><a href="baby_toy.html">Baby Toy</a></li>
-                <li><a href="outdoor_toy.html">Outdoor Toy</a></li>
+                <li><a href="toys-games.html#v-pills-home">Educational Toy</a> </li>
+                <li><a href="toys-games.html#v-pills-profile">Construction Toy</a></li>
+                <li><a href="toys-games.html#v-pills-settings0">Board Game</a></li>
+                <li><a href="toys-games.html#v-pills-settings1">Musical Toy</a></li>
+                <li><a href="toys-games.html#v-pills-settings2">Puzzle Game</a></li>
+                <li><a href="toys-games.html#v-pills-settings3">Building Blocks</a></li>
+                <li><a href="toys-games.html#v-pills-settings6">Sports Toy</a></li>
+                <li><a href="toys-games.html#v-pills-settings7">Creative Toy</a></li>
+                <li><a href="toys-games.html#v-pills-settings8">Baby Toy</a></li>
+                <li><a href="toys-games.html#v-pills-settings9">Outdoor Toy</a></li>
             </ul>
         </div>
     </div>
@@ -612,30 +612,30 @@
                             <div class="contact-form">
 
                                 <ul class="list-unstyled pt-3">
-                                    <li><a href="educational_toy.html">Educational Toy</a></li>
+                                    <li><a href="toys-games.html#v-pills-home">Educational Toy</a></li>
 
-                                    <li><a href="construction_toy.html">Construction Toy</a></li>
+                                    <li><a href="toys-games.html#v-pills-profile">Construction Toy</a></li>
 
-                                    <li><a href="board_game.html"> Board Game</a></li>
+                                    <li><a href="toys-games.html#v-pills-settings0"> Board Game</a></li>
 
-                                    <li> <a href="musical_toy.html">Musical Toy</a> </li>
+                                    <li> <a href="toys-games.html#v-pills-settings1">Musical Toy</a> </li>
 
-                                    <li> <a href="puzzle_game.html"> Puzzle Game </a> </li>
+                                    <li> <a href="toys-games.html#v-pills-settings2"> Puzzle Game </a> </li>
 
                                 </ul>
                             </div>
                         </div>
                         <div class="col-md-5 pt-3  col-6">
                             <ul class="list-unstyled">
-                                <li> <a href="building_blocks.html"> Building Blocks </a> </li>
+                                <li> <a href="toys-games.html#v-pills-settings3"> Building Blocks </a> </li>
 
-                                <li><a href="sports_toy.html"> Sports Toy </a> </li>
+                                <li><a href="toys-games.html#v-pills-settings6"> Sports Toy </a> </li>
 
-                                <li> <a href="creative_toy.html"> Creative Toy </a></li>
+                                <li> <a href="toys-games.html#v-pills-settings7"> Creative Toy </a></li>
 
-                                <li> <a href="baby_toy.html"> Baby Toy</a></li>
+                                <li> <a href="toys-games.html#v-pills-settings8"> Baby Toy</a></li>
 
-                                <li> <a href="outdoor_toy.html">Outdoor Toy</a> </li>
+                                <li> <a href="toys-games.html#v-pills-settings9">Outdoor Toy</a> </li>
                             </ul>
                         </div>
                     </div>
