--- a/alpha_numeric.html
+++ b/alpha_numeric.html
@@ -23,7 +23,7 @@
         </div>
     </section>
     <!-- top-header start -->
-     <!-- Header start -->
+    <!-- Header start -->
     <header class="sticky-top bg-white">
         <div class="container-fluid">
             <div class="row">
@@ -54,13 +54,15 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-home"> Educational
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-home">
+                                                        Educational
                                                         Toy</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-profile">Construction Toy
+                                                    <a class="dropdown-item"
+                                                        href="toys-games.html#v-pills-profile">Construction Toy
                                                     </a>
                                                 </li>
                                             </td>
@@ -68,48 +70,56 @@
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings0"> Board Game</a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings0">
+                                                        Board Game</a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings1">Musical Toy</a>
-                                                </li>
-                                            </td>
-                                        </tr>
-                                        <tr>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings2"> Puzzle Game </a>
-                                                </li>
-                                            </td>
-                                            <td class="p-0">
-                                                <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings3"> Building Blocks </a>
+                                                    <a class="dropdown-item"
+                                                        href="toys-games.html#v-pills-settings1">Musical Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings6"> Sports Toy </a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings2">
+                                                        Puzzle Game </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings7"> Creative Toy </a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings3">
+                                                        Building Blocks </a>
                                                 </li>
                                             </td>
                                         </tr>
                                         <tr>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings8"> Baby Toy</a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings6">
+                                                        Sports Toy </a>
                                                 </li>
                                             </td>
                                             <td class="p-0">
                                                 <li>
-                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings9">Outdoor Toy</a>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings7">
+                                                        Creative Toy </a>
+                                                </li>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item" href="toys-games.html#v-pills-settings8">
+                                                        Baby Toy</a>
+                                                </li>
+                                            </td>
+                                            <td class="p-0">
+                                                <li>
+                                                    <a class="dropdown-item"
+                                                        href="toys-games.html#v-pills-settings9">Outdoor Toy</a>
                                                 </li>
                                             </td>
                                         </tr>
@@ -117,8 +127,10 @@
                                 </table>
                             </ul>
                         </li>
-                        <li class="nav-item"><a href="toys-games.html#v-pills-settings4" class="nav-link">Birthday Gifts</a></li>
-                        <li class="nav-item"><a href="toys-games.html#v-pills-settings5" class="nav-link">Corporate Gifts</a></li>
+                        <li class="nav-item"><a href="toys-games.html#v-pills-settings4" class="nav-link">Birthday
+                                Gifts</a></li>
+                        <li class="nav-item"><a href="toys-games.html#v-pills-settings5" class="nav-link">Corporate
+                                Gifts</a></li>
                     </ul>
                 </div>
                 <div class="col-auto ms-lg-auto mx-auto">
@@ -228,6 +240,12 @@
                         <h4><b>Alpha Numeric Board - 29 Sticks</b></h4>
                         <h3><b>₹ 249</b></h3>
                         <span>Free Delivery</span>
+                        <div class="text-center mt-4">
+                            <a href="https://wa.link/xmj64w" class="button rounded-1" id="whats-link">
+                                <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
+                                CONNECT US</a>
+
+                        </div>
                     </div>
                     <div class="border box p-4">
                         <p>Boost Your Child's Learning Through Play</p>
@@ -246,12 +264,7 @@
                             <li><b>🎨 Color Recognition</b></li>
                             <li><b>👶 Montessori-Inspired</b></li>
                         </ul>
-                        <div class="text-center mt-4">
-                            <a href="https://wa.link/xmj64w" class="button rounded-1" id="whats-link">
-                                <span class="h4"><i class="fa-brands fa-whatsapp"></i> </span>
-                                CONNECT US</a>
 
-                        </div>
                     </div>
                 </div>
                 <!-- <div class="col-lg-6 px-5 pt-4">
@@ -316,8 +329,8 @@
         </div>
     </section>
     <!-- alpha_numeric end -->
-   <!-- footer start -->
-   <section class="contact mt-5">
+    <!-- footer start -->
+    <section class="contact mt-5">
         <div class="container-fluid px-5">
             <div class="row">
                 <div class="col-md-3 pt-4">
